app/media-server/flexget/flexget-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flexget
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5050
  selector:
    app: flexget
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
