app/media-server/flexget/flexget-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: flexget
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: flexget.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: flexget
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flexget.home.adaminformatika.hu
    secretName: flexget.home.adaminformatika.hu
